--- a/BNTU/OEBS_2_SQL_Helper/OEBSHelper/OEBSHelper.csproj
+++ b/BNTU/OEBS_2_SQL_Helper/OEBSHelper/OEBSHelper.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Bunifu_UI_v1.5.4">
       <HintPath>..\..\..\..\Bunifu_UI_v1.5.4.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.TextEditor">
+      <HintPath>.\ICSharpCode.TextEditor.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL" />
     <Reference Include="System" />
