--- a/BNTU/OEBS_2_SQL_Helper/OEBSHelper/OEBSHelper.csproj
+++ b/BNTU/OEBS_2_SQL_Helper/OEBSHelper/OEBSHelper.csproj
@@ -45,6 +45,8 @@
     <Reference Include="Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
